src/index.css
:root {
    --primary-color: #8a5069;
    --primary-background: #f2f2f2
}

html, body {
    min-height: 100%;
    min-width: 100%;
    margin: 0;
    background: var(--primary-background);
}

#root {
    min-height: 100%;
}

.logo {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
}

